fixed overflow

--- a/src/containers/LandingPage/LandingPage.module.css
+++ b/src/containers/LandingPage/LandingPage.module.css
@@ -287,6 +287,7 @@
   }
 
   .Right {
+    width: 100%;
     height: 100%;
     padding-right: 0;
     align-items: flex-start;
@@ -361,7 +362,7 @@
     position: absolute;
     top: 1em;
     transform: scale(0.7);
-    margin-right: 7em;
+    /* margin-right: 7em; */
   }
 
   .Span {
